--- a/src/style2.css
+++ b/src/style2.css
@@ -1,26 +1,136 @@
-@import url('https://fonts.googleapis.com/css?family=Bungee+Inline|Oswald');
+* {
+  --laranja_avermelhado: #5d4037;
+  --laranja_avermelhado2: #6d4c41;
+  --tijolo: #b22222;
+  --preto: #010101;
+  --rosybrown: #bc8f8f;
+}
+
+body {
+  font-family: "Oswald";
+  font-size: 14px;
+  margin: 0%;
+}
+
+.style1 {
+  width: auto;
+  height: auto;
+  align-items: center;
+}
+
+h1 {
+  align-items: initial;
+  font-size: 46px;
+  height: 50px;
+  font-family: "Bungee Inline";
+  color: var(--preto);
+  font-weight: lighter;
+}
+
+dt {
+  height: 25px;
+  font-family: "lato";
+  font-size: 20px;
+  color: var(--preto);
+  font-weight: bolder;
+}
+
+/* Show the price of each item in a large font, in the color named 'firebrick' */
+.price {
+  font-size: 20px;
+  color: var(--preto);
+  font-weight: bolder;
+  order: 2;
+  padding-left: 10px;
+}
+
+/* Show each of the section headings of the menu (e.g. "Starters") in small caps, colored #6d4c41. */
+h2 {
+  text-transform: uppercase;
+  margin: 0;
+  font-family: "Lato";
+  color: var(--preto);
+}
+.details {
+  font-family: "Lato";
+  color: var(--preto);
+}
+
+/* Draw a 2px dashed rosybrown border around the address/footer */
+footer {
+  text-align: right;
+  padding: 10px;
+  margin: auto
+
+}
+@import url("https://fonts.googleapis.com/css?family=Bungee+Inline|Oswald");
 
 /* Use the 'Oswald' font family at 14px throughout the body of the document. */
-nav {font-family: sans-serif; font-size: 10px;}
+nav {
+  font-family: sans-serif;
+  font-size: 10px;
+}
 
-#main {width: 900px; margin: 10px auto;}
+#main {
+  width: 900px;
+  margin: 10px auto;
+}
 /* Use the 'Bungee Inline' font at 46px and lighter weight for the restaurant name. */
 
+#menu {
+  columns: 420px 2;
+  column-gap: 40px;
 
-#menu {columns: 420px 2; column-gap: 60px;}
-section {margin-bottom: 20px; padding: 10px;}
+}
+
+#starters{
+  padding: 20px;
+  border-style:solid;
+  border-color: var(--preto);
+}
+
+#desserts{
+  padding: 20px;
+  border-style:solid;
+  border-color: var(--preto);
+}
+  
+section {
+  margin-bottom: 20px;
+  padding: 10px;
+}
 
 /* Show each of the section headings of the menu (e.g. "Starters") in uppercase. */
-h2 {margin-top: 0;}
+h2 {
+  margin-top: 0;
+}
 
 /* Make the name of each menu item appear in bold in a 16px size. */
-dt {display: inline;}
+dt {
+  display: inline;
+}
 /* Make a comma appear after the name of each menu item (before the description) */
 
-dd {display: inline; margin: 0;}
-dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
+dd {
+  display: inline;
+  margin: 0;
+}
+dd::after {
+  content: " ";
+  display: block;
+  clear: both;
+  margin-bottom: 15px;
+}
 
-.price {float: right; padding: 0 0 35px 20px;}
+dd::before{
+  content: ",";
+  display: inline;
+}
+
+.price {
+  float: right;
+  padding: 0 0 35px 20px;
+}
 
 /* Right-align the text of the address/footer */
 
