--- a/src/style1.css
+++ b/src/style1.css
@@ -8,20 +8,22 @@
 }
 
 body {
+  max-width:100%;
   font-family: 'Lato';
   font-size: 18px;
   margin: 0%;
   background-image: url("img/map-bg.jpg");
   background-repeat: no-repeat;
-  background-position:center center;
+  background-position:center;
   background-attachment:fixed;
+  background-size:100%;
 
 }
 
 .style1{
   width: auto;
   height: auto;
-align-items:center ;
+  align-items:center ;
 }
 
 h1{
@@ -51,11 +53,20 @@ dt{
 
 /* Show each of the section headings of the menu (e.g. "Starters") in small caps, colored #6d4c41. */
 h2{
+
+  text-transform: capitalize;
   text-transform: uppercase;
   margin: 0;
   font-family: 'Lato';
   color:var(--laranja_avermelhado2);
 }
+
+.letter{
+  font-size:40px; 
+  font-weight: bold;
+  color:var(--laranja_avermelhado2);
+}
+
 details{
   font-family: 'Lato';
   color:var(--preto);
@@ -66,6 +77,7 @@ footer{
   padding: 2px;
   border-style:dashed;
   border-color: var(--rosybrown);
+  border-width: 2px;
 }
 
 /* Use the 'Supermercado One' font at 45px (colored #5d4037) for the restaurant name. */
@@ -84,6 +96,7 @@ nav {
 
 /* Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. */
 #menu {
+  column-rule: dotted;
   columns: 400px 2;
   column-gap: 100px;
 }
